# ARBA

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
data/: calibrated_params.json
experiments/: run_calibration.py  run_factorial.py  run_mimic_validation.py  run_stress_tests.py
paper/: paper.tex  references.bib
results/: mimic_validation_30rep.csv  multi_rep_epoch_detail.csv  multi_rep_summary.csv  multi_rep_table.tex
src/: __init__.py  calibration.py  cusum.py  environment.py  mimic_calibrator.py  mimic_loader.py  online_learning.py  oracle.py  patient.py  plotting.py  policies.py  regret.py  simulation.py  theory.py
tests/: test_cusum.py  test_edge_cases.py  test_environment.py  test_integration.py  test_mimic.py  test_oco_policy.py  test_oracle_regret.py  test_policies.py  test_stress.py
