[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arba"
version = "0.3.0"
description = "CUSUM-triggered robust optimization for non-stationary healthcare resource allocation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "cvxpy>=1.4",
    "highspy>=1.6",
    "matplotlib>=3.7",
    "streamlit>=1.28",
    "plotly>=5.15",
]

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
per-file-ignores = {"dashboard/*" = ["E501"], "experiments/*" = ["E501"]}

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
